@@ -1,7 +1,7 @@
 <?php
 
 /*!
- * ua-parser-php v1.2.0
+ * ua-parser-php v1.2.1
  *
  * Copyright (c) 2011-2012 Dave Olsen, http://dmolsen.com
  * Licensed under the MIT license
